# inference-router

./: Cargo.toml  README.md  test_pool.py
.claude/: settings.local.json
.ergon.studio/: scratchpad.md
src/: lib.rs  lifecycle.rs  main.rs
src/api/: body_peek.rs  body_peek_tests.rs  mod.rs  model_scan.rs  model_scan_tests.rs  proxy.rs  routes.rs  state.rs
src/api/loop_guard/: cross_turn.rs  cross_turn_tests.rs  detector.rs  detector_tests.rs  endpoint.rs  endpoint_tests.rs  mod.rs  mod_tests.rs  sse.rs  sse_tests.rs
src/config/: alias.rs  alias_tests.rs  backend.rs  gpu_tags.rs  mod.rs  model.rs  model_tests.rs  perf.rs  perf_tests.rs  preset.rs  preset_tests.rs  settings.rs  settings_tests.rs  store.rs  store_tests.rs
src/orchestrator/: allocation.rs  allocation_tests.rs  engine.rs  engine_tests.rs  eviction.rs  eviction_tests.rs  mod.rs  orchestrator.rs
src/process/: manager.rs  manager_tests.rs  mod.rs
src/system/: gpu_watchdog.rs  memcap.rs  memcap_tests.rs  mod.rs  stats.rs  stats_tests.rs
src/ui/: assets.rs  mod.rs  templates.rs  templates_tests.rs
src/vram/: estimator.rs  estimator_tests.rs  llama_fit.rs  llama_fit_tests.rs  mod.rs  tracker.rs  tracker_tests.rs
templates/: _live_left_inner.html  _live_models_inner.html  base.html  dashboard.html  dashboard_fragment.html
tests/: dashboard_fragment.rs  proxy_integration.rs
