[package]
name = "inference-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
nix = { version = "0.29", features = ["process", "signal"] }
urlencoding = "2"
shellexpand = "3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
ggus = "0.5.1"
memmap2 = "0.9.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
assert-json-diff = "2"
tempfile = "3"
